# Mind

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
adaptive_controller_system4/: adaptive_loop.py  adaptive_runner.py
docs/: observer_paper.html
intervention_engine_v1.5_v2/: diagnostics_bridge.py  models.json
v1.5/: V1.5_runner.py  hooks.py  layer_probe.py  model_loader.py  models.json  plotter.py  predictor.py  spectral.py  utils.py
